plugins {
    id 'java'
    id 'eclipse'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation(platform('org.junit:junit-bom:5.12.2'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation 'org.assertj:assertj-core:3.27.2'

    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

tasks.named("test", Test) {
    useJUnitPlatform()
}
